# The-Ledger

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  REPORT.md  pyproject.toml  pytest.ini  requirements.txt
data/: seed_events.jsonl
datagen/: event_simulator.py  generate_all.py  schema_validator.py
docs/: local_postgres_testing.md  requirements.md
document-intelligence-refinery/: .env.example  pyproject.toml
document-intelligence-refinery/.refinery/: extraction_ledger.jsonl
document-intelligence-refinery/document_refinery/: __init__.py  pipeline.py
document-intelligence-refinery/rubric/: extraction_rules.yaml
document-intelligence-refinery/src/: pipeline.py
ledger/: event_store.py  schema.sql
ledger/agents/: base_agent.py  (+1 more)
portal/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: debug_application_streams.py  run_mcp_server.py  run_pipeline.py
src/: __init__.py  append_concurrency_proof.py  auto_high_confidence_binding.py  event_store.py  gas_town_demo.py  navigator_query.py  schema.sql  what_if_credit_high.py
tests/: conftest.py  postgres_support.py  test_agent_session_aggregate.py  test_command_handlers.py  test_concurrency.py  test_domain_event_models.py  test_event_factories.py  test_event_registry.py  test_event_store.py  test_event_store_retry.py  test_gas_town.py  test_loan_application_aggregate.py  test_mcp_lifecycle.py  test_navigator_query.py  test_projections.py  test_schema_migrations.py  test_upcasting.py
(+200 files in other folders)
