[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "apex-ledger"
version = "0.1.0"
description = "Agentic event store and audit infrastructure."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.35.0,<0.40",
    "asyncpg>=0.29.0,<0.30",
    "anthropic>=0.30.0,<0.40",
    "pydantic>=2.6.0,<3.0",
    "langgraph>=0.2.0,<0.3",
    "fastmcp>=0.9.0,<1.0",
    "reportlab>=4.2.0,<5.0",
    "openpyxl>=3.1.0,<4.0",
    "faker>=24.0.0,<25.0",
    "python-dotenv>=1.0.0,<2.0",
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
